// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationComponent /> should NOT render if isVisible is set to false 1`] = `
preact-render-spy (1 nodes)
-------
{null}

`;

exports[`<NavigationComponent /> should render if isVisible is set to true 1`] = `
preact-render-spy (1 nodes)
-------
<li class="navigation-component-class">
  <div>(((Template)))</div>
</li>

`;
